--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,64 @@
 body{
-    background-color: green;
+    font-family: 'Roboto', sans-serif;
+    background-color: #85BDBF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25%;
 }
+
+#img-div {
+    display: flex;
+}
+
+#main {
+    background-color: #C2FCF7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5%;
+    padding: 10%
+    
+}
+
+#pokemon-input {
+    border-radius: 10px;
+    border-style: none;
+    padding: 10px;
+    box-shadow: 0px 0px 14px 0px #919191;
+}
+
+#pokemon-input-button {
+    border-radius: 10px;
+    border-style: none;
+    padding: 10px;
+    box-shadow: 0px 0px 14px 0px #919191;
+    transition: transform 0.5s;
+}
+
+
+#next-button {
+    max-width: 300px;
+    border-radius: 10%;
+    border-style: none;
+    padding: 10px;
+    box-shadow: 0px 0px 14px 0px #919191;
+    transition: transform 0.5s;
+}
+
+#next-button:hover {
+    transition: transform 0.5s;
+    transform:translateY(-2px)
+}
+
+#pokemon-input-button:hover {
+    transition: transform 0.5s;
+    transform:translateY(-2px)
+}
+
+
+
+
+
+
+
